# yosegi-scope

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/yosegi/: acquire.py  cli.py  models.py  stitch.py  survey.py
tests/: test_acquire.py  test_cli.py  test_stitch.py  test_survey.py  test_survey_wiring.py
