[project]
name = "yosegi-scope"
version = "0.1.0"
description = "Assemble OpenFlexure microscopy mosaics by fetching, aligning, and stitching overlapping tiles."
readme = "README.md"
authors = [
    { name = "Mos Daniele", email = "dany.mosh@yahoo.com" }
]
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11,<3.12"
dependencies = [
    "m2stitch>=0.7.0",
    "numpy>=1.26.4",
    "openflexure-microscope-client>=0.1.8",
    "pillow>=9.5.0",
    "typer>=0.25.1",
]

[project.scripts]
yosegi = "yosegi.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/yosegi"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.14",
]

[tool.ruff]
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, flake8-bugbear
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic Option(...) defaults trip B008 (call in argument default).
"src/yosegi/cli.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
